--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
     - 5.6
 
 env:
-    - WP_VERSION=4.4-beta3 WP_MULTISITE=0
+    - WP_VERSION=nightly WP_MULTISITE=0
     - WP_VERSION=4.3.1 WP_MULTISITE=0
     - WP_VERSION=4.2 WP_MULTISITE=0
     - WP_VERSION=4.1 WP_MULTISITE=0
