--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,12 @@
 language: php
-
 php:
-    - 5.3
-    - 5.4
-    - 5.6
-
+- 5.6
+- 7.1
+sudo: false
 env:
-    - WP_VERSION=nightly WP_MULTISITE=0
-    - WP_VERSION=4.3.1 WP_MULTISITE=0
-    - WP_VERSION=4.2 WP_MULTISITE=0
-    - WP_VERSION=4.1 WP_MULTISITE=0
-    - WP_VERSION=4.0 WP_MULTISITE=0
-    - WP_VERSION=3.9 WP_MULTISITE=0
+- WP_VERSION=nightly WP_MULTISITE=0
+- WP_VERSION=3.9 WP_MULTISITE=0
 
 before_script:
-    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
-
+- bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 script: phpunit
