--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,13 @@ sudo: false
 env:
 - WP_VERSION=nightly WP_MULTISITE=0
 - WP_VERSION=3.9 WP_MULTISITE=0
-
+cache:
+  directories:
+  - vendor
+  - "$HOME/.composer/cache"
+install:
+- composer install
 before_script:
 - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-script: phpunit
+script:
+- composer test
