--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,22 @@
       "name": "Takashi Kitajima",
       "email": "inc@2inc.org",
       "homepage": "https://2inc.org"
+    },
+    {
+      "name": "Toshihiro Kanai",
+      "email": "i@miruc.co",
+      "homepage": "https://miruc.co/",
+      "role": "Developer"
     }
   ],
   "require-dev": {
     "phpunit/phpunit": "^5.7",
     "doctrine/instantiator": "1.0.4",
     "phpunit/php-token-stream": "1.4.11",
-    "phpdocumentor/reflection-docblock": "3.2.2"
+    "phpdocumentor/reflection-docblock": "3.2.2",
+    "squizlabs/php_codesniffer": "^3.3",
+    "wp-coding-standards/wpcs": "^1.1",
+    "phpcompatibility/php-compatibility": "^8.2"
   },
   "require": {
     "php": ">=5.6"
@@ -22,6 +31,9 @@
       "bash bin/phpunit.sh"
     ],
     "wpphpunit": "bash bin/wpphpunit.sh",
-    "phpunit": "bash bin/phpunit.sh"
+    "phpunit": "bash bin/phpunit.sh",
+    "set-config": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility,vendor/wp-coding-standards/wpcs",
+    "lint": "\"vendor/bin/phpcs\" --ignore=*/vendor/*,*/node_modules/* --extensions=php ./ --standard=phpcs.xml",
+    "fix": "\"vendor/bin/phpcbf\" --ignore=*/vendor/*,*/node_modules/* --extensions=php ./ --standard=phpcs.xml"
   }
 }
