--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,13 @@ language: php
 matrix:
   include:
   - php: 7.2
+    env: WP_VERSION=latest WP_MULTISITE=0
   - php: 5.6
+    env: WP_VERSION=nightly WP_MULTISITE=0
   - php: 5.6
     env: WP_TRAVISCI=phpcs
 
 sudo: false
-
-env:
-  - WP_VERSION=nightly WP_MULTISITE=0
-  - WP_VERSION=4.3 WP_MULTISITE=0
 
 cache:
   directories:
