--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: trusty
 language: php
 
 matrix:
@@ -32,4 +33,3 @@ script:
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
       composer run lint
     fi
-
