--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "type": "wordpress-plugin",
-  "license": "GPL-2.0+",
+  "license": "GPL-2.0-or-later",
   "authors": [
     {
       "name": "Takashi Kitajima",
@@ -14,26 +14,19 @@
       "role": "Developer"
     }
   ],
-  "require-dev": {
-    "phpunit/phpunit": "^5.7",
-    "doctrine/instantiator": "1.0.4",
-    "phpunit/php-token-stream": "1.4.11",
-    "phpdocumentor/reflection-docblock": "3.2.2",
-    "squizlabs/php_codesniffer": "^3.3",
-    "wp-coding-standards/wpcs": "^1.1",
-    "phpcompatibility/php-compatibility": "^8.2"
-  },
   "require": {
     "php": ">=5.6"
   },
+  "require-dev": {
+		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
+		"squizlabs/php_codesniffer": "^3.5",
+		"phpcompatibility/php-compatibility": "^9.3",
+		"wp-coding-standards/wpcs": "^2.3",
+		"sirbrillig/phpcs-variable-analysis": "^2.10",
+    "wp-phpunit/wp-phpunit": "^5.6"
+  },
   "scripts" :{
-    "test": [
-      "bash bin/phpunit.sh"
-    ],
-    "wpphpunit": "bash bin/wpphpunit.sh",
-    "phpunit": "bash bin/phpunit.sh",
-    "set-config": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility,vendor/wp-coding-standards/wpcs",
-    "lint": "\"vendor/bin/phpcs\" --ignore=*/vendor/*,*/node_modules/* --extensions=php ./ --standard=phpcs.xml",
-    "fix": "\"vendor/bin/phpcbf\" --ignore=*/vendor/*,*/node_modules/* --extensions=php ./ --standard=phpcs.xml"
+		"format": "phpcbf --standard=./.phpcs.xml.dist --report-summary --report-source",
+		"lint": "phpcs --standard=./.phpcs.xml.dist"
   }
 }
